# django-jsonform-test

./: db.sqlite3  pyproject.toml
app/: settings.py
testapp/: admin.py  models.py
testapp/migrations/: 0001_initial.py
