[tool.poetry]
name = "django-jsonform-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
django-jsonform = "^2.21.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
